 ══════════
  February 9th, 2020
 ══════════
  Main App (v3.5.0.0)
  • UPDATED: Overhauled the way supported device data is loaded to reduce state size consumption.  All data is pulled from a Firebase Database now.
  • ADDED: Device Activity data is now loaded from the smartapp and available to the devices to reduce the many reduntant calls to the API which causes rate-limiting. #230
  • FIXED: Stopped removing ' character from speech text builder. #226
  • FIXED: Lot's of other minor UI and logic bugfixes.

  Action App (v3.5.0.0)
  • FIXED: Resolved issue with multiple actions conditions being ignored #232
  • ADDED: You can now define volumes for each tier in tiered actions.
  • FIXED: Other bugfixes.

  Zone App (v3.5.0.0)
  • FIXED: Other bugfixes.

  Echo Device (v3.5.0.0)
  • FIXED: Alarm/Reminder creation fixes (@TonyFleisher) #200
  • UPDATED: Support for the new device activity logic.
_____________________________________

 ══════════
  January 24th, 2020
 ══════════
  Main App (v3.4.0.0)
  • ADDED: Ability to control SHM based on switches #217 #214
  • FIXED: Other bugfixes.

  Action App (v3.4.0.0)
  • FIXED: Volume Control Actions #147
  • FIXED: Alarm/Reminder creation changes (@JDiaz11) #200
  • FIXED: Other bugfixes.

  Zone App (v3.4.0.0)
  • FIXED: Zone Activation Notifications #211
  • FIXED: Zone Deactivation based on time in condition #212
  • FIXED: Other bugfixes.

  Echo Device (v3.4.0.0)
  • FIXED: Alarm/Reminder creation changes (@JDiaz11) #200
  • FIXED: Other bugfixes.
_____________________________________

 ══════════
  January 17th, 2020
 ══════════
  Zone App (v3.3.3.0)
  • FIXED: Activate and Deactivate delays are now working again

  Main App (v3.3.3.0)
  • FIXED: Issue with conditions.
_____________________________________

 ══════════
  January 7th, 2020
 ══════════
  Zone App (v3.3.2.0)
  • FIXED: Issue with action and zone conditions.

  Main App (v3.3.2.0)
  • FIXED: Issue with conditions.

  Action App (v3.3.2.0)